--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,30 @@
 Package: MSstatsPPI
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Protein-Protein Interaction Analysis for MS-based Proteomics Experiments
 Version: 0.1.0
-Author: Who wrote it
+Authors@R: c(
+  person("Anthony", "Wu", email = "anthonywu92@gmail.com", role = c("aut", "cre")),
+  person("Olga", "Vitek", email = "o.vitek@northeastern.edu", role = "aut")) 
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: A set of tools for protein-protein interaction analysis using mass spectrometry-based proteomics data and PPI databases.
+License: Artistic-2.0
+Depends: R (>= 4.0)
+Imports: 
+    RCy3,
+    httr,
+    jsonlite,
+    r2r
+Suggests: 
+    data.table,
+    BiocStyle,
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+VignetteBuilder: knitr
+biocViews: ImmunoOncology, MassSpectrometry, Proteomics, Software, QualityControl
 Encoding: UTF-8
 LazyData: true
+URL: http://msstats.org
+BugReports: https://groups.google.com/forum/#!forum/msstats
+Config/testthat/edition: 3
+RoxygenNote: 7.3.2
