--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,19 @@ Type: Package
 Title: Protein-Protein Interaction Analysis for MS-based Proteomics Experiments
 Version: 0.1.0
 Authors@R: c(
-  person("Anthony", "Wu", email = "anthonywu92@gmail.com", role = c("aut", "cre")),
-  person("Olga", "Vitek", email = "o.vitek@northeastern.edu", role = "aut")) 
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: A set of tools for protein-protein interaction analysis using mass spectrometry-based proteomics data and PPI databases.
+    person("Anthony", "Wu", email = "wu.anthon@northeastern.edu", 
+        role = c("aut", "cre")),
+    person("Olga", "Vitek", email = "o.vitek@northeastern.edu", 
+        role = "aut", comment=c(ORCID = "0000-0003-1728-1104"))) 
+Description: A set of tools for protein-protein interaction analysis using mass 
+    spectrometry-based proteomics data and PPI databases. The package takes as 
+    input the output of MSstats differential abundance analysis and provides 
+    functions to perform PPI enrichment analysis and visualization in the 
+    context of prior knowledge from past literature. Notably, this package 
+    integrates with INDRA, which is a database of protein-protein interactions 
+    extracted from the literature using text mining techniques.
 License: Artistic-2.0
-Depends: R (>= 4.0)
+Depends: R (>= 4.4.0)
 Imports: 
     RCy3,
     httr,
@@ -21,9 +28,9 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
-biocViews: ImmunoOncology, MassSpectrometry, Proteomics, Software, QualityControl
+biocViews: ImmunoOncology, MassSpectrometry, Proteomics, Software, 
+    QualityControl
 Encoding: UTF-8
-LazyData: true
 URL: http://msstats.org
 BugReports: https://groups.google.com/forum/#!forum/msstats
 Config/testthat/edition: 3
