--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: MSstatsPPI
+Package: MSstatsBioNet
 Type: Package
 Title: Protein-Protein Interaction Analysis for MS-based Proteomics Experiments
 Version: 0.1.0
@@ -8,9 +8,9 @@ Authors@R: c(
     person("Olga", "Vitek", email = "o.vitek@northeastern.edu", 
         role = "aut", comment=c(ORCID = "0000-0003-1728-1104"))) 
 Description: A set of tools for protein-protein interaction analysis using mass 
-    spectrometry-based proteomics data and PPI databases. The package takes as 
-    input the output of MSstats differential abundance analysis and provides 
-    functions to perform PPI enrichment analysis and visualization in the 
+    spectrometry-based proteomics data and network databases. The package takes 
+    as input the output of MSstats differential abundance analysis and provides 
+    functions to perform enrichment analysis and visualization in the 
     context of prior knowledge from past literature. Notably, this package 
     integrates with INDRA, which is a database of protein-protein interactions 
     extracted from the literature using text mining techniques.
@@ -31,7 +31,7 @@ VignetteBuilder: knitr
 biocViews: ImmunoOncology, MassSpectrometry, Proteomics, Software, 
     QualityControl
 Encoding: UTF-8
-URL: http://msstats.org, https://vitek-lab.github.io/MSstatsPPI/
+URL: http://msstats.org, https://vitek-lab.github.io/MSstatsBioNet/
 BugReports: https://groups.google.com/forum/#!forum/msstats
 Config/testthat/edition: 3
 RoxygenNote: 7.3.2
