--- a/.github/workflows/codium-pr-agent.yml
+++ b/.github/workflows/codium-pr-agent.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+      contents: read
     name: Run pr agent on every pull request
     steps:
       - name: PR Agent action step
