--- a/.github/workflows/codium-pr-agent.yml
+++ b/.github/workflows/codium-pr-agent.yml
@@ -15,4 +15,5 @@ jobs:
         uses: Codium-ai/pr-agent@main
         env:
           OPENAI_KEY: ${{ secrets.MSSTATS_OPENAI_KEY }}
+          OPENAI_ORG: ${{ secrets.MSSTATS_OPENAI_ORG }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
