refactor(getSubnetworkFromIndra): Add input validation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(getSubnetworkFromIndra)
 export(visualizeNetworks)
 importFrom(RCy3,createNetworkFromDataFrames)
 importFrom(RCy3,createVisualStyle)
+importFrom(RCy3,layoutNetwork)
 importFrom(RCy3,mapVisualProperty)
 importFrom(RCy3,setVisualStyle)
 importFrom(httr,POST)
