config(dependencies): Add more cytoscape dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,14 @@
 export(annotateProteinInfoFromIndra)
 export(getSubnetworkFromIndra)
 export(visualizeNetworks)
+importFrom(RCy3,addAnnotationShape)
+importFrom(RCy3,addAnnotationText)
 importFrom(RCy3,createNetworkFromDataFrames)
 importFrom(RCy3,createVisualStyle)
+importFrom(RCy3,getAnnotationList)
+importFrom(RCy3,getNetworkCenter)
+importFrom(RCy3,getNodePosition)
+importFrom(RCy3,groupAnnotation)
 importFrom(RCy3,layoutNetwork)
 importFrom(RCy3,mapVisualProperty)
 importFrom(RCy3,setVisualStyle)
