feat(getSubnetworkFromIndra): Add correlation metrics into INDRA results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(annotateProteinInfoFromIndra)
 export(getSubnetworkFromIndra)
 export(visualizeNetworks)
+importFrom(MSstats,quantification)
 importFrom(RCy3,addAnnotationShape)
 importFrom(RCy3,addAnnotationText)
 importFrom(RCy3,createNetworkFromDataFrames)
@@ -20,3 +21,4 @@ importFrom(jsonlite,toJSON)
 importFrom(r2r,hashmap)
 importFrom(r2r,keys)
 importFrom(r2r,query)
+importFrom(tidyr,pivot_wider)
