--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(jsonlite,toJSON)
 importFrom(r2r,hashmap)
 importFrom(r2r,keys)
 importFrom(r2r,query)
+importFrom(stats,cor)
 importFrom(tidyr,pivot_wider)
