refactor(getSubnetworkFromIndra): Create separate helper function to get correlation matrix (#34)
* refactor(getSubnetworkFromIndra): Create separate helper function to get correlation matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(annotateProteinInfoFromIndra)
 export(getSubnetworkFromIndra)
 export(visualizeNetworks)
-importFrom(MSstats,quantification)
 importFrom(RCy3,addAnnotationShape)
 importFrom(RCy3,addAnnotationText)
 importFrom(RCy3,createNetworkFromDataFrames)
@@ -21,4 +20,5 @@ importFrom(jsonlite,toJSON)
 importFrom(r2r,hashmap)
 importFrom(r2r,keys)
 importFrom(r2r,query)
+importFrom(stats,cor)
 importFrom(tidyr,pivot_wider)
